--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         background-clip: text;
       }
     </style>
+    <link type="Image/x-icon" href="./logo-only.png" rel="icon" />
   </head>
   <body class="font-sans antialiased text-gray-900 bg-white">
     <!-- Header -->
@@ -101,8 +102,9 @@
     <section id="home" class="hero-gradient pt-40 pb-20 overflow-hidden">
       <div class="container mx-auto px-6">
         <div class="text-center max-w-5xl mx-auto mb-16 animate-fade-in">
-          <h1 class="font-bold leading-tight mb-6">
-            Инновационные <span class="text-gradient">IT-решения</span><br />
+          <h1 class="font-bold leading-tight mb-6 text-2xl">
+            Инновационные <span class="text-gradient text-2xl">IT-решения</span
+            ><br />
             для вашего бизнеса
           </h1>
           <p class="text-xl text-gray-600 mb-10 max-w-3xl mx-auto">
@@ -139,20 +141,20 @@
       <div class="container mx-auto px-6">
         <div class="grid grid-cols-2 md:grid-cols-4 gap-8 max-w-4xl mx-auto">
           <div class="stat-card scroll-fade-in">
-            <h3 class="stat-number">250+</h3>
+            <h3 class="stat-number">100%</h3>
             <p class="text-gray-600 mt-2">Завершенных проектов</p>
           </div>
           <div class="stat-card scroll-fade-in" style="animation-delay: 0.1s">
-            <h3 class="stat-number">120+</h3>
+            <h3 class="stat-number">97,9%</h3>
             <p class="text-gray-600 mt-2">Довольных клиентов</p>
           </div>
           <div class="stat-card scroll-fade-in" style="animation-delay: 0.2s">
-            <h3 class="stat-number">15+</h3>
-            <p class="text-gray-600 mt-2">Стран присутствия</p>
+            <h3 class="stat-number">3</h3>
+            <p class="text-gray-600 mt-2">Страны присутствия</p>
           </div>
           <div class="stat-card scroll-fade-in" style="animation-delay: 0.3s">
-            <h3 class="stat-number">28</h3>
-            <p class="text-gray-600 mt-2">Наград</p>
+            <h3 class="stat-number">9</h3>
+            <p class="text-gray-600 mt-2">Эко-систем</p>
           </div>
         </div>
       </div>
@@ -162,7 +164,7 @@
     <section id="services" class="section-large bg-white">
       <div class="container mx-auto px-6">
         <div class="text-center mb-20 scroll-fade-in">
-          <h2 class="font-bold mb-4">Наши услуги</h2>
+          <h2 class="font-bold mb-4 text-2xl">Наши услуги</h2>
           <p class="text-xl max-w-2xl mx-auto text-gray-600">
             Комплексные решения для цифровой трансформации вашего бизнеса
           </p>
@@ -170,22 +172,35 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
           <!-- Service 1 -->
-          <div class="feature-card scroll-fade-in hover-lift">
-            <div class="icon-hover w-12 h-12 text-2xl text-gray-800 mb-6">
-              <i class="fas fa-code"></i>
+          <div
+            class="service-card bg-white rounded-xl overflow-hidden shadow-md hover:shadow-xl transition duration-500 h-full"
+          >
+            <div class="p-6">
+              <div class="icon-hover w-12 h-12 text-2xl text-gray-800 mb-6">
+                <i class="fas fa-code"></i>
+              </div>
+              <h3 class="text-xl font-semibold text-gray-900 mb-3">
+                Веб-разработка
+              </h3>
+              <p class="text-gray-600 mb-4 leading-relaxed">
+                Создаем современные, адаптивные и высоконагруженные
+                веб-приложения с использованием новейших технологий.
+              </p>
+              <ul class="space-y-2 text-gray-600">
+                <li>
+                  <i class="fas fa-check text-green-500 mr-2 mt-1"></i>
+                  <span>Корпоративные сайты</span>
+                </li>
+                <li>
+                  <i class="fas fa-check text-green-500 mr-2 mt-1"></i>
+                  <span>Интернет-магазины</span>
+                </li>
+                <li>
+                  <i class="fas fa-check text-green-500 mr-2 mt-1"></i>
+                  <span>Веб-порталы</span>
+                </li>
+              </ul>
             </div>
-            <h3 class="text-xl font-semibold text-gray-900 mb-3">
-              Веб-разработка
-            </h3>
-            <p class="text-gray-600 mb-4 leading-relaxed">
-              Создаем современные, адаптивные и высоконагруженные веб-приложения
-              с использованием новейших технологий.
-            </p>
-            <ul class="space-y-2 text-sm text-gray-600">
-              <li>• Корпоративные сайты</li>
-              <li>• Интернет-магазины</li>
-              <li>• Веб-порталы</li>
-            </ul>
           </div>
 
           <!-- Service 2 -->
@@ -387,8 +402,10 @@
                     15 лет опыта
                   </h4>
                   <p class="text-gray-600">
-                    Мы работаем на рынке IT-услуг с 2008 года, постоянно
-                    развиваясь и совершенствуя наши компетенции.
+                    Мы работаем на рынке IT-услуг постоянно развиваясь,
+                    совершенствуя наши компетенции и расширяя границы сообщества
+                    нашей компании, с помощью привлечения специалистов из разных
+                    уголков мира.
                   </p>
                 </div>
               </div>
@@ -399,11 +416,12 @@
                 </div>
                 <div>
                   <h4 class="text-lg font-medium text-gray-800 mb-1">
-                    80+ специалистов
+                    Наша команда
                   </h4>
                   <p class="text-gray-600">
-                    В нашей команде работают сертифицированные специалисты с
-                    опытом реализации сложных проектов.
+                    Мы создаем эко-систему, в которой в синергии трудятся
+                    сертифицированные специалисты с опытом реализации сложных
+                    проектов.
                   </p>
                 </div>
               </div>
@@ -624,7 +642,7 @@
               </p>
               <a
                 href="#"
-                class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center"
+                class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center hidden"
               >
                 Подробнее <i class="fas fa-arrow-right ml-2"></i>
               </a>
@@ -649,7 +667,7 @@
               </p>
               <a
                 href="#"
-                class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center"
+                class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center hidden"
               >
                 Подробнее <i class="fas fa-arrow-right ml-2"></i>
               </a>
@@ -674,7 +692,7 @@
               </p>
               <a
                 href="#"
-                class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center"
+                class="text-blue-400 hover:text-blue-300 font-medium inline-flex items-center hidden"
               >
                 Подробнее <i class="fas fa-arrow-right ml-2"></i>
               </a>
@@ -685,7 +703,7 @@
         <div class="text-center mt-12">
           <a
             href="#"
-            class="inline-flex items-center px-8 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg"
+            class="inline-flex items-center px-8 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg hidden"
           >
             Посмотреть все проекты <i class="fas fa-arrow-right ml-2"></i>
           </a>
@@ -839,7 +857,8 @@
                 продажам и обслуживанию клиентов.
               </p>
               <a
-                href="#"
+                target="_blank"
+                href="https://appmaster.io/ru/blog/budushchee-dopolnennoi-real-nosti-i-virtual-noi-real-nosti-v-biznes-prilozheniiakh"
                 class="inline-flex items-center font-medium text-blue-600 hover:text-blue-800"
               >
                 Читать статью <i class="fas fa-arrow-right ml-2"></i>
@@ -872,7 +891,8 @@
                 малого и среднего бизнеса.
               </p>
               <a
-                href="#"
+                target="_blank"
+                href="https://softline.ru/about/blog/kiberbezopasnost-ot-a-do-ya"
                 class="inline-flex items-center font-medium text-blue-600 hover:text-blue-800"
               >
                 Читать статью <i class="fas fa-arrow-right ml-2"></i>
@@ -905,7 +925,8 @@
                 выбрать оптимальное решение.
               </p>
               <a
-                href="#"
+                target="_blank"
+                href="https://selectel.ru/blog/web-application-types/"
                 class="inline-flex items-center font-medium text-blue-600 hover:text-blue-800"
               >
                 Читать статью <i class="fas fa-arrow-right ml-2"></i>
